<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DJI FPV Demo</string>
    <string name="action_settings">Settings</string>   
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="record_video_mode">Record Video Mode</string>
    <string name="v_x">V_x</string>
    <string name="stop_record">Stop Record</string>
    <string name="shoot_photo_mode">Shoot Photo Mode</string>
    <string name="start_record0">Start Record</string>
    <string name="start_record1">Start Record</string>
    <string name="capture">Capture</string>
    <string name="textview">TextView</string>

</resources>
